--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -40,6 +40,9 @@ a {
     padding: 10px 60px 5px 60px;
     background-color: var(--colorBg);
     color: white;
+    position:sticky;
+    top:0;
+    left:0;
 }
 
 .header__heading {
