--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,5 +1,9 @@
 @import 'base.css';
 @import 'signup.css';
+@import 'employee_dashboard.css';
+@import 'dash-base.css';
+@import 'emp_dashboard_sec2.css';
+
 
 .main {
     overflow-y: hidden;
