--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -3,6 +3,7 @@
 @import 'employee_dashboard.css';
 @import 'dash-base.css';
 @import 'emp_dashboard_sec2.css';
+@import 'emp_dashboard_sec3.css';
 @import 'login.css';
 @import 'student-dashboard.css';
 
