--- a/public/assets/css/student-dashboard.css
+++ b/public/assets/css/student-dashboard.css
@@ -3,16 +3,47 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
+   
 
 }
-#cursorpointer{
-    position: absolute;
-    width:20px;
-    height: 20px;
-    background-color: #3E13E3;
-    border-radius: 100%;  
-    transition: all ease;
+.studentmaincontainer{
+    display: flex;
 }
+
+/* sidebar */
+
+.sidebar{
+    background-color: #CAC9FF;
+    width: 9%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding:20px 0;
+}
+
+
+.sidebar a:hover{
+    background-color: grey;
+    width:100%;
+    height: 10%;
+    color:white
+
+}
+.sidebar h1{
+    font-size: 1.1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.sidebar img{
+    height: 30px;
+    width: 30px;
+}
+
+/*main dashboard css*/
 
 .studentdashboard{
     height: 100vh;
@@ -20,24 +51,39 @@ body{
     display: flex;
    justify-content: center;
    align-items: center;
-   
+   gap:10px;
+
    
 }
+
+#cursorpointer{
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    background-color: #3E13E3;
+    border-radius: 50%;
+    transition: all ease;
+}
 .studentdashboard .leftdashboard{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     width: 45%;
+    height: 20rem;
     border-right:#E3E729 5px solid;
-    padding:10px
+    gap:9rem;
+    padding:5rem;
 }
 .studentdashboard .leftdashboard .top{
     display: flex;
-justify-content: center;
+    justify-content: center;
 }
 
 .studentdashboard .leftdashboard .top .infocontainer{
-    width: 80%;
-    height:20%;
+    width: 70%;
+    height:95%;
     background-color: #E3E729;
-    padding:0 20px 5px 20px;
+    padding:10px 20px 5px 20px;
     border-radius: 30px;
     transition: all 0.3s ease;
 }
@@ -57,11 +103,12 @@ justify-content: center;
 
 .studentdashboard .leftdashboard .top .infocontainer p{
     font-size: 1.2rem;
+    letter-spacing: 1px;
 }
 
 .cardarrow{
   position: absolute;
-  top:40%;
+  top:55%;
   left:44%;
   cursor: pointer;
 }
@@ -70,17 +117,15 @@ justify-content: center;
     display: flex;
     font-size: 0.7rem;
     gap:5rem;
-    padding-top:3rem;
 
 }
 .leftdashboard .bottom .sminfo{
-    width:18rem;
+    width:17rem;
     height:5rem;
     background-color: #E3E729;
     border-radius:20px;
     display: flex;
     flex-direction: column;
-    line-height: 0;
     justify-content: center;
     align-items: center;
     transition: all 0.3s ease;
@@ -104,7 +149,115 @@ justify-content: center;
     align-items: center;
     font-size: 0.8rem;
 }
+.rightdashboard .avatar h1{
+    text-transform: capitalize;
+}
 .rightdashboard .avatar img{
     transition: all 0.5s ease ;
     cursor: pointer;
+}
+
+
+/* second section */
+#taskhistory{
+    width:97%;
+    height: 80%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding:20px;
+    gap: 10px;
+    position: absolute;
+    top:14%;
+    left:8%;
+}
+#taskhistory img{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+#taskhistory #close{
+    width:20%;
+    height: 10%;
+    font-size: larger;
+    font-weight: 900;
+    background-color: white;
+    color:black;
+    border-radius: 10px;
+    cursor: pointer;
+    margin:0 auto;
+}
+
+table {
+    text-align: center;
+    width: 100%;
+    border-collapse: none;
+    font-size: 1.1rem;
+    outline: none;
+    border: none;
+    margin:10px;
+}
+
+th, td {
+    border: 1px solid #CAC9FF;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+    color:black;
+}
+
+tr:hover {
+    background-color: #50520b;
+    color:white;
+}
+.markAsDone{
+    padding:5px;
+    border:none;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+
+
+/* Notification div */
+#notificationsdiv{
+    position: absolute;
+    background-color:white;
+    width: 90%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    padding:10px;
+    justify-content:center;
+    
+    text-align: center;
+}
+
+.bubblesdiv{
+    display:flex;
+    position: relative;
+    top:38%;
+    left:10%;
+    gap:10px;
+    flex-wrap: wrap;
+
+}
+#notificationsdiv .bubblesdiv .bubble{
+    background-color: #CAC9FF;
+    border-radius: 10px;
+    min-width: 20rem;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size:1.5rem;
+    color:black;
+
 }
