--- a/public/assets/css/emp_dashboard_sec2.css
+++ b/public/assets/css/emp_dashboard_sec2.css
@@ -80,35 +80,6 @@
 .studentBox {
     cursor: pointer;
 }
-
-
-
-/*
-.SW_formContainer {
-    margin: 30px;
-    display: flex;
-    flex-flow: column wrap;
-}
-
-.formLabelAndInput {
-    display: flex;
-    flex-flow: column;
-    margin-bottom: 20px;
-}
-
-.idealFit {
-    margin-bottom: 10px;
-    text-decoration: underline;
-}
-
-.swBtn {
-    background-color: black;
-    color: white;
-    padding: 10px;
-    font-size: 18px;
-    cursor: pointer;
-}
-
 /*Student View Box*/
 .studentsView {
     background-color: var(--colorYellow);
@@ -131,4 +102,51 @@
 .assignLink:hover {
     color: blue;
     transition: 0.3s ease;
+}
+
+/*modal*/
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 80%;
+    text-align: center;
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+
+.modal-content h2 {
+    margin-top: 0;
+}
+
+.sendRequest {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    font-size: 15px;
+    cursor: pointer;
 }
